--- a/css/delivery_request_seeker/delivery_inprogress_seeker.css
+++ b/css/delivery_request_seeker/delivery_inprogress_seeker.css
@@ -120,3 +120,23 @@ button.dialogClose + button.dialogConfirmNow {
     margin-top: 1rem;
   }
 
+
+
+  .circle {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #ccc;
+    display: inline-block;
+
+  }
+
+  .favio_trackingDiv div {
+    display: flex;
+    gap:1.5rem;
+  }
+
+  input[type="checkbox"] {
+    display: none;
+  }
