--- a/css/delivery_request_seeker/delivery_inprogress_seeker.css
+++ b/css/delivery_request_seeker/delivery_inprogress_seeker.css
@@ -122,7 +122,7 @@ button.dialogClose + button.dialogConfirmNow {
 
 
 
-  .circle {
+  /* .circle {
     position: absolute;
     width: 30px;
     height: 30px;
@@ -139,4 +139,4 @@ button.dialogClose + button.dialogConfirmNow {
 
   input[type="checkbox"] {
     display: none;
-  }
+  } */
