--- a/css/delivery_request_seeker/delivery_inprogress_rider.css
+++ b/css/delivery_request_seeker/delivery_inprogress_rider.css
@@ -45,5 +45,39 @@
 }
 
 
+/* SNAP PHOTO ========================= */
+#modal {
+    border-radius: var(--border-radius);
+}
+
+.photo2 {
+    display: flex;
+    flex-flow: column-reverse;
+    gap: .5rem;
+}
+
+#snap {
+    border-radius: var(--border-radius);
+    font-weight: bold;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    background-color: var(--color-secondary);
+    border: 1px solid var(--color-secondary);
+    color: var(--color-contrast-dark);
+    width: 50%;
+    border-radius: var(--border-radius);
+    text-align: center;
+    display: block;
+    margin: auto;
+}
+
+#snap:hover {
+    cursor: pointer;
+}
+ 
+#completedImage {
+    max-width: 50%;
+}
+
 
 /* ================================ */
