--- a/css/delivery_request_seeker/delivery_inprogress_rider.css
+++ b/css/delivery_request_seeker/delivery_inprogress_rider.css
@@ -81,3 +81,58 @@
 
 
 /* ================================ */
+
+
+.pt ul{
+    padding-left: 50px;
+    position: relative;
+}
+
+.pt ul::after{
+    content: "";
+    position: absolute;
+    width: 3px;
+    height: calc(100% - 58px);
+    left: 40px;
+    top: 0;
+    background: #07B875;
+    z-index: -1;
+    
+}
+
+.pt ul li{
+    padding: 30px 0;
+    padding-left: 20px;
+}
+
+.pt ul li span{
+   text-decoration: none;
+   position: relative;
+   /* background: blue; */
+   font-size: 1.36rem;
+   line-height: 1rem;
+   font-weight: 500;
+}
+
+.pt ul li span:before{
+    content: '';
+    position: absolute;
+    background: #ffffff;
+    width: 18px;
+    height: 18px;
+    left: -42px;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 50px;
+    border: 4px solid #07B875;
+    transition: background 250ms;
+}
+
+.pt ul li span.active{
+    font-weight: 600;
+}
+
+.pt ul li span.active::before{
+   background: #07B875;
+}
+
